--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 
   <link rel="stylesheet" href="style.css" />
 </head>
+
+  <!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
+
+<script src="firebase.js"></script>
+
 <body>
 
   <header>
@@ -58,3 +66,4 @@
   </script>
 </body>
 </html>
+
