--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Quiz Trainer</title>
 
-  <!-- PWA / iOS meta -->
+  <!-- PWA / iOS -->
   <meta name="theme-color" content="#0a84ff" />
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -19,31 +18,30 @@
 <body>
   <header>
     <h1>Quiz Trainer</h1>
-    <p class="subtitle">Übungsmodus • Prüfungsmodus • Statistik — offline & iPhone-ready</p>
+    <p class="subtitle">Übung • Prüfung • Statistik — offline & Login</p>
   </header>
 
+  <!-- LOGIN BOX -->
+  <section id="authBox" style="max-width:420px;margin:10px auto;padding:12px;border:1px solid #ddd;border-radius:12px;">
+    <h2 style="margin:0 0 10px 0;">Login</h2>
+
+    <input id="email" type="email" placeholder="Email" style="width:100%;padding:10px;margin:6px 0;" />
+    <input id="password" type="password" placeholder="Jelszó" style="width:100%;padding:10px;margin:6px 0;" />
+
+    <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:8px;">
+      <button onclick="register()" style="padding:10px;">Regisztráció</button>
+      <button onclick="login()" style="padding:10px;">Belépés</button>
+      <button onclick="logout()" style="padding:10px;">Kilépés</button>
+    </div>
+
+    <p id="authStatus" style="margin-top:10px;color:#333;">Nincs bejelentkezve.</p>
+  </section>
+
   <main>
-
-    <!-- AUTH PANEL -->
-    <section id="authPanel" class="auth" aria-label="Login">
-      <div id="authLoggedOut">
-        <input id="email" type="email" placeholder="Email" autocomplete="email" />
-        <input id="password" type="password" placeholder="Jelszó" autocomplete="current-password" />
-        <button id="btnLogin">Belépés</button>
-        <button id="btnRegister">Regisztráció</button>
-        <p id="authMsg" aria-live="polite"></p>
-      </div>
-
-      <div id="authLoggedIn" style="display:none;">
-        <span id="userLabel"></span>
-        <button id="btnLogout">Kilépés</button>
-      </div>
-    </section>
-
     <nav id="menu" aria-label="Hauptmenü">
-      <button onclick="startPractice()" aria-label="Übungsmodus starten">🟢 Übungsmodus</button>
-      <button onclick="startExam()" aria-label="Prüfungsmodus starten">🔵 Prüfungsmodus (30 Fragen)</button>
-      <button onclick="showStats()" aria-label="Statistik anzeigen">📊 Statistik</button>
+      <button onclick="startPractice()">🟢 Übungsmodus</button>
+      <button onclick="startExam()">🔵 Prüfungsmodus (30 Fragen)</button>
+      <button onclick="showStats()">📊 Statistik</button>
     </nav>
 
     <section id="quiz" aria-live="polite"></section>
@@ -51,24 +49,26 @@
   </main>
 
   <footer>
-    <small>Offline-ready PWA — füge das Icon zum Home Screen (Share → Add to Home Screen)</small>
+    <small>Offline-ready PWA — iPhone: Share → Add to Home Screen</small>
   </footer>
 
-  <!-- Adat + logika -->
+  <!-- 1) Firebase compat (NINCS import, NINCS module) -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+  <!-- 2) Firebase init -->
+  <script src="firebase.js"></script>
+
+  <!-- 3) App -->
   <script src="database.js"></script>
   <script src="quiz.js"></script>
 
-  <!-- Firebase + Auth (ESM) -->
-  <script type="module" src="firebase.js"></script>
-  <script type="module" src="auth.js"></script>
-
-  <!-- Service worker regisztráció -->
+  <!-- 4) Service worker -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('sw.js')
-          .then(reg => console.log('Service Worker registered:', reg.scope))
-          .catch(err => console.warn('Service Worker reg failed:', err));
+        navigator.serviceWorker.register('sw.js').catch(()=>{});
       });
     }
   </script>
