--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz Trainer</title>
+  <title>IHK34i Quiz Trainer</title>
 
-  <!-- PWA / iOS -->
+  <!-- PWA -->
   <meta name="theme-color" content="#0a84ff" />
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -16,59 +16,102 @@
 </head>
 
 <body>
-  <header>
-    <h1>Quiz Trainer</h1>
-    <p class="subtitle">Übung • Prüfung • Statistik — offline & Login</p>
-  </header>
-
-  <!-- LOGIN BOX -->
-  <section id="authBox" style="max-width:420px;margin:10px auto;padding:12px;border:1px solid #ddd;border-radius:12px;">
-    <h2 style="margin:0 0 10px 0;">Login</h2>
-
-    <input id="email" type="email" placeholder="Email" style="width:100%;padding:10px;margin:6px 0;" />
-    <input id="password" type="password" placeholder="Jelszó" style="width:100%;padding:10px;margin:6px 0;" />
-
-    <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:8px;">
-      <button onclick="register()" style="padding:10px;">Regisztráció</button>
-      <button onclick="login()" style="padding:10px;">Belépés</button>
-      <button onclick="logout()" style="padding:10px;">Kilépés</button>
+  <!-- Sticky Topbar -->
+  <header class="topbar">
+    <div class="topbar__left">
+      <div class="brand">
+        <div class="brand__title">IHK34i Quiz</div>
+        <div class="brand__sub">Offline • iPhone-ready • Cloud-Profil</div>
+      </div>
     </div>
 
-    <p id="authStatus" style="margin-top:10px;color:#333;">Nincs bejelentkezve.</p>
-  </section>
+    <div class="topbar__right">
+      <div id="userBadge" class="userBadge hidden"></div>
+      <button id="btnOpenAuth" class="btn btn--ghost">Anmelden</button>
+      <button id="btnLogout" class="btn btn--ghost hidden">Abmelden</button>
+    </div>
+  </header>
 
-  <main>
-    <nav id="menu" aria-label="Hauptmenü">
-      <button onclick="startPractice()">🟢 Übungsmodus</button>
-      <button onclick="startExam()">🔵 Prüfungsmodus (30 Fragen)</button>
-      <button onclick="showStats()">📊 Statistik</button>
-    </nav>
+  <main class="container">
+    <section class="panel">
+      <nav id="menu" class="menu" aria-label="Hauptmenü">
+        <button class="btn" onclick="startPractice()">🟢 Übungsmodus</button>
+        <button class="btn" onclick="startExamB()">🔵 Prüfungsmodus B (IHK)</button>
+        <button class="btn btn--ghost" onclick="showStats()">📊 Statistik</button>
+        <button class="btn btn--ghost" onclick="resetLocal()">🧹 Reset (nur Gerät)</button>
+      </nav>
 
-    <section id="quiz" aria-live="polite"></section>
-    <section id="result" aria-live="polite"></section>
+      <div class="metaRow">
+        <div id="syncState" class="pill">Offline bereit</div>
+        <div id="examState" class="pill pill--muted">Kein Test aktiv</div>
+      </div>
+    </section>
+
+    <section id="result" class="result" aria-live="polite"></section>
+    <section id="quiz" class="quiz" aria-live="polite"></section>
   </main>
 
-  <footer>
-    <small>Offline-ready PWA — iPhone: Share → Add to Home Screen</small>
+  <footer class="footer">
+    <small>Tip: iPhone Safari → Share → “Add to Home Screen”</small>
   </footer>
 
-  <!-- 1) Firebase compat (NINCS import, NINCS module) -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  <!-- Auth Modal -->
+  <div id="authModal" class="modal hidden" role="dialog" aria-modal="true" aria-label="Login">
+    <div class="modal__card">
+      <div class="modal__header">
+        <h2>Profil</h2>
+        <button id="btnCloseAuth" class="btn btn--ghost">✕</button>
+      </div>
 
-  <!-- 2) Firebase init -->
-  <script src="firebase.js"></script>
+      <div class="tabs">
+        <button class="tab active" data-tab="login">Login</button>
+        <button class="tab" data-tab="register">Register</button>
+      </div>
 
-  <!-- 3) App -->
+      <div class="modal__body">
+        <div class="formRow">
+          <label>E-Mail</label>
+          <input id="authEmail" type="email" placeholder="name@mail.com" autocomplete="email" />
+        </div>
+        <div class="formRow">
+          <label>Passwort</label>
+          <input id="authPass" type="password" placeholder="••••••••" autocomplete="current-password" />
+        </div>
+
+        <div class="row">
+          <button id="btnDoLogin" class="btn">Anmelden</button>
+          <button id="btnDoRegister" class="btn hidden">Konto erstellen</button>
+        </div>
+
+        <p class="hint" id="authHint">
+          Tipp: Login = bestehő fiók. Register = új fiók.
+        </p>
+
+        <div class="divider"></div>
+
+        <p class="hint">
+          Mentés:
+          <b>Ha be vagy jelentkezve</b> → Firestore (felhő, több eszköz).
+          <b>Ha nem</b> → csak a telefon/gép (offline localStorage).
+        </p>
+
+        <div id="authMsg" class="notice hidden"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Daten -->
   <script src="database.js"></script>
-  <script src="quiz.js"></script>
 
-  <!-- 4) Service worker -->
+  <!-- App modules -->
+  <script type="module" src="firebase.js"></script>
+  <script type="module" src="quiz.js"></script>
+
+  <!-- Service worker -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('sw.js').catch(()=>{});
+        navigator.serviceWorker.register('sw.js').catch(() => {});
       });
     }
   </script>
